--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -1,227 +1,242 @@
-<!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
-<html lang="en">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<html xmlns:th="http://www.thymeleaf.org"
+      lang="es">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    </head>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
-<div class="login">
-  <h2 class="active"> sign in </h2>
+    <body layout:fragment="body">
+        <div class="login">
+            <h2 class="active"> sign in </h2>
+            <form th:action="@{/Login}" method="post" th:object="${usuario}" accept-charset="UTF-8">
 
-  <h2 class="nonactive"> sign up </h2>
-  <form>
-   
-    
+                <div th:if="${error}">
+                    <strong><h3>¡Ups!</h3></strong>
+                    <p th:text="${error}" class="text-danger"></p>
+                </div>
+                <br>
+                <label>E-MAIL:</label>
+                <input type="text" class="text" name="email" th:field="*{email}">
+                <br>
+                <br>
+                <label>Password:</label>
+                <div class="password-container">
 
-    <input type="text" class="text" name="username">
-     <span>username</span>
+                    <div class="input-container">
+                        <input type="password" class="text" name="password" id="password-input" th:field="*{password}" required>
+                        <label for="password-input" class="eye-icon" id="toggle-password">&#128274;</label>
+                    </div>
+                </div>
+                <br>
 
-    <br>
-    
-    <br>
-
-    <input type="password" class="text" name="password" id="password-input" required>
-    <span class="eye-icon" id="toggle-password">&#128274;</span>
-    <br>
-
-    <input type="checkbox" id="checkbox-1-1" class="custom-checkbox" />
-    <label for="checkbox-1-1">Keep me Signed in</label>
-    
-    <button class="signin">
-      Sign In
-    </button>
+                <button type="submit" class="signin">
+                    Ingresar
+                </button>
 
 
-    <hr>
+                <hr>
 
-    <a href="#">Forgot Password?</a>
-  </form>
+                <a href="#">Forgot Password?</a>
+            </form>
 
-</div>
+        </div>
+    </body>
+
 </html>
 
 <style>
     body,
-.signin {
-  background-color: #d3d3d3;
-  font-family: 'Montserrat', sans-serif;
-  color: #fff;
-  font-size: 14px;
-  letter-spacing: 1px;
-}
+    .signin {
+        background-color: #141426;
+        font-family: 'Montserrat', sans-serif;
+        color: #fff;
+        font-size: 14px;
+        letter-spacing: 1px;
+    }
 
-.login {
-  position: relative;
-  height: 560px;
-  width: 405px;
-  margin: auto;
-  padding: 60px 60px;
-  background: url(https://picsum.photos/id/1004/5616/3744) no-repeat   center center #505050;   
-  background-size: cover;
-  box-shadow: 0px 30px 60px -5px #000;
-}
+    .login {
+        position: relative;
+        height: 560px;
+        width: 405px;
+        margin: auto;
+        padding: 60px 60px;
+        background: url(https://picsum.photos/id/1004/5616/3744) no-repeat   center center #1c1c1ce8;
+        background-size: cover;
+        box-shadow: 0px 30px 60px -5px #000;
+    }
 
-form {
-  padding-top: 80px;
-}
+    form {
+        padding-top: 10px;
+    }
 
-.active {
-  border-bottom: 2px solid #1161ed;
-}
+    .active {
+        border-bottom: 2px solid #1161ed;
+    }
 
-.nonactive {
-  color: rgba(255, 255, 255, 0.2);
-}
+    .nonactive {
+        color: rgba(255, 255, 255, 0.2);
+    }
 
-h2 {
-  padding-left: 12px;
-  font-size: 22px;
-  text-transform: uppercase;
-  padding-bottom: 5px;
-  letter-spacing: 2px;
-  display: inline-block;
-  font-weight: 100;
-}
+    h2 {
+        padding-left: 12px;
+        font-size: 22px;
+        text-transform: uppercase;
+        padding-bottom: 5px;
+        letter-spacing: 2px;
+        display: inline-block;
+        font-weight: 100;
+    }
 
-h2:first-child {
-  padding-left: 0px;
-}
+    h2:first-child {
+        padding-left: 0px;
+    }
 
-span {
-  text-transform: uppercase;
-  font-size: 12px;
-  opacity: 0.4; 
-  display: inline-block;
-  position: relative;
-  top: -65px;
-  transition: all 0.5s ease-in-out;
-}
+    span {
+        text-transform: uppercase;
+        font-size: 12px;
+        opacity: 0.4;
+        display: inline-block;
+        position: relative;
+        top: -65px;
+        transition: all 0.5s ease-in-out;
+    }
 
-.text {
-  border: none;
-  width: 89%;
-  padding: 10px 20px;
-  display: block;
-  height: 15px;
-  border-radius: 20px;
-  background: rgba(255, 255, 255, 0.1);
-  border: 2px solid rgba(255, 255, 255, 0);
-  overflow: hidden;
-  margin-top: 15px;
-  transition: all 0.5s ease-in-out;
-}
+    .text {
+        border: none;
+        width: 89%;
+        padding: 10px 20px;
+        display: block;
+        height: 15px;
+        border-radius: 20px;
+        background: rgba(255, 255, 255, 0.1);
+        border: 2px solid rgba(255, 255, 255, 0);
+        overflow: hidden;
+        margin-top: 15px;
+        transition: all 0.5s ease-in-out;
+    }
 
-.text:focus {
-  outline: 0;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-radius: 20px;
-  background: rgba(0, 0, 0, 0);
-}
+    .text:focus {
+        outline: 0;
+        border: 2px solid rgba(255, 255, 255, 0.5);
+        border-radius: 20px;
+        background: rgba(0, 0, 0, 0);
+    }
 
-.text:focus + span {
-  opacity: 0.6;
-}
+    .text:focus + span {
+        opacity: 0.6;
+    }
 
-input[type="text"],
-input[type="password"] {
-  font-family: 'Montserrat', sans-serif;
-  color: #fff;
-}
+    input[type="text"],
+    input[type="password"] {
+        font-family: 'Montserrat', sans-serif;
+        color: #fff;
+    }
 
 
 
-input {
-  display: inline-block;
-  padding-top: 20px;
-  font-size: 14px;
-}
+    input {
+        display: inline-block;
+        padding-top: 20px;
+        font-size: 14px;
+    }
 
-h2,
-span,
-.custom-checkbox {
-  margin-left: 20px;
-}
+    h2,
+    span,
+    .custom-checkbox {
+        margin-left: 20px;
+    }
 
-.custom-checkbox {
-  -webkit-appearance: none;
-  background-color: rgba(255, 255, 255, 0.1);
-  padding: 8px;
-  border-radius: 2px;
-  display: inline-block;
-  position: relative;
-  top: 6px;
-}
+    .custom-checkbox {
+        -webkit-appearance: none;
+        background-color: rgba(255, 255, 255, 0.1);
+        padding: 8px;
+        border-radius: 2px;
+        display: inline-block;
+        position: relative;
+        top: 6px;
+    }
 
-.custom-checkbox:checked {
-  background-color: rgba(17, 97, 237, 1);
-}
+    .custom-checkbox:checked {
+        background-color: rgba(17, 97, 237, 1);
+    }
 
-.custom-checkbox:checked:after {
-  content: '\2714';
-  font-size: 10px;
-  position: absolute;
-  top: 1px;
-  left: 4px;
-  color: #fff;
-}
+    .custom-checkbox:checked:after {
+        content: '\2714';
+        font-size: 10px;
+        position: absolute;
+        top: 1px;
+        left: 4px;
+        color: #fff;
+    }
 
-.custom-checkbox:focus {
-  outline: none;
-}
+    .custom-checkbox:focus {
+        outline: none;
+    }
 
-label {
-  display: inline-block;
-  padding-top: 10px;
-  padding-left: 5px;
-}
+    label {
+        display: inline-block;
+        padding-top: 10px;
+        padding-left: 5px;
+    }
 
-.signin {
-  background-color: #1161ed;
-  color: #FFF;
-  width: 100%;
-  padding: 10px 20px;
-  display: block;
-  height: 39px;
-  border-radius: 20px;
-  margin-top: 30px;
-  transition: all 0.5s ease-in-out;
-  border: none;
-  text-transform: uppercase;
-}
+    .signin {
+        background-color: #1161ed;
+        color: #FFF;
+        width: 100%;
+        padding: 10px 20px;
+        display: block;
+        height: 39px;
+        border-radius: 20px;
+        margin-top: 30px;
+        transition: all 0.5s ease-in-out;
+        border: none;
+        text-transform: uppercase;
+    }
 
-.signin:hover {
-  background: #4082f5;
-  box-shadow: 0px 4px 35px -5px #4082f5;
-  cursor: pointer;
-}
+    .signin:hover {
+        background: #4082f5;
+        box-shadow: 0px 4px 35px -5px #4082f5;
+        cursor: pointer;
+    }
 
-.signin:focus {
-  outline: none;
-}
+    .signin:focus {
+        outline: none;
+    }
 
-hr {
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  top: 85px;
-  position: relative;
-}
+    hr {
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        top: 85px;
+        position: relative;
+    }
 
-a {
-  text-align: center;
-  display: block;
-  top: 120px;
-  position: relative;
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.2);
-}
+    a {
+        text-align: center;
+        display: block;
+        top: 120px;
+        position: relative;
+        text-decoration: none;
+        color: rgba(255, 255, 255, 0.2);
+    }
 
-.eye-icon {
-      cursor: pointer;
-      position: absolute;
-      right: 29px;
-      top: 49%;
-      transform: translateY(-50%);
-       font-size: 24px;
+    .password-container {
+        display: flex;
+        align-items: center;
+    }
+
+    .input-container {
+        display: flex;
+        align-items: center;
+        position: relative;
+        width: 800px;
+    }
+
+    .input-container input {
+        margin-right: 10px; /* Espaciado entre el input y el icono de candado */
+    }
+
+    .eye-icon {
+        cursor: pointer;
+        font-size: 24px;
     }
 </style>
 
@@ -229,14 +244,14 @@ a {
     var passwordInput = document.getElementById("password-input");
     var togglePasswordButton = document.getElementById("toggle-password");
 
-    togglePasswordButton.addEventListener("click", function() {
-      if (passwordInput.type === "password") {
-        passwordInput.type = "text";
-        togglePasswordButton.textContent = "👁️";
-      } else {
-        passwordInput.type = "password";
-        togglePasswordButton.textContent = "🔒";
-      }
+    togglePasswordButton.addEventListener("click", function () {
+        if (passwordInput.type === "password") {
+            passwordInput.type = "text";
+            togglePasswordButton.textContent = "🔓️";
+        } else {
+            passwordInput.type = "password";
+            togglePasswordButton.textContent = "🔒";
+        }
     });
 </script>
 
