--- a/src/main/resources/templates/listadoUsuarios.html
+++ b/src/main/resources/templates/listadoUsuarios.html
@@ -6,15 +6,18 @@
     <body layout:fragment="body">
         <br/>
         <br/>
+<!--        <a class="btn btn-secondary btn-lg disabled welcome-message" role="button" aria-disabled="true">Bienvenido, <span th:text="${usuariologueado.nombre}"></span>!</a>
 
-        <div class="card">
+        
+-->        <div class="card">
             <h1 class="card-header" align="center">Lista de Usuarios</h1>
-
         </div>
+
+
         <br/>
 
         <div class="d-grid gap-2 col-6 mx-auto">
-            <a th:href="@{/usuario/form/{idusuario}(idusuario=0)}" class="btn btn-success">Add
+            <a th:href="@{/usuario/form/{idusuario}(idusuario=0)}" class="btn btn-success bi bi-person-plus-fill"> Agregar Usuario
             </a>
         </div>
         <hr/>
@@ -59,28 +62,28 @@
             </form>
         </div>
         <div align="center" style="width: 98%; margin: 0 auto;">
-            <table id="myTable" class="table table-striped table-dark" style="width: 120%">
+            <table id="myTable" class="table table-striped table-dark" style="width: 100%">
                 <thead>
                     <tr>
-                        <th scope="col">Delete</th>
-                        <th scope="col">Imagen</th>
-                        <th scope="col">UserName</th>
-                        <th scope="col">NombreCompleto</th>
+                        <th scope="col" style="width: 4%">Delete</th>
+                        <th scope="col" style="width: 5%">Imagen</th>
+                        <th scope="col" style="width: 5%">UserName</th>
+                        <th scope="col" style="width: 8%">NombreCompleto</th>
                         <!--                    <th scope="col">ApellidoP</th>
                                             <th scope="col">ApellidoM</th>-->
-                        <th scope="col">Email</th>
-                        <th scope="col">Password</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Sexo</th>
-                        <th scope="col">Telephone</th>
-                        <th scope="col">Cellphone</th>
-                        <th scope="col">CURP</th>
-                        <th scope="col">ID/Rol</th>
+                        <th scope="col" style="width: 6%">Email</th>
+                        <th scope="col" style="width: 5%">Password</th>
+                        <th scope="col" style="width: 5%">Date</th>
+                        <th scope="col" style="width: 2%">Sexo</th>
+                        <th scope="col" style="width: 5%">Telephone</th>
+                        <th scope="col" style="width: 5%">Cellphone</th>
+                        <th scope="col" style="width: 6%">CURP</th>
+                        <th scope="col" style="width: 3%">ID/Rol</th>
 <!--                        <th scope="col">NombreRol</th>-->
-                        <th scope="col">IDDireccion</th>
-                        <th scope="col">Status</th>
+                        <th scope="col" style="width: 8%">Direccion</th>
+                        <th scope="col" style="width: 3%">Status</th>
                         <!--                    <th scope="col">Direccion</th>-->
-                        <th scope="col">Edit</th>
+                        <th scope="col" style="width: 4%">Edit</th>
 
                     </tr>
 
@@ -195,8 +198,10 @@
 //        $('#myTable').DataTable();
 //    });
 
-new DataTable('#myTable', {
-    scrollX: true
-});
+//new DataTable('#myTable', {
+//    scrollX: true
+//});
+
 
 </script>
+
